applications/longhorn/policy.securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: longhorn-security
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: longhorn
  oidc:
    provider:
      issuer: "https://authentik.inf-k8s.net/application/o/longhorn/"
    clientIDRef:
      name: longhorn-managed-secrets
    clientSecret:
      name: longhorn-managed-secrets
    redirectURL: "https://longhorn.inf-k8s.net"
    logoutPath: "/"
